web-infras/parser/tests/fixtures/babel/core/uncategorised/536/output.txt
[SyntaxError]: Missing initializer in const declaration (1,7)
1|const a;
 |     ^
